# damaage_panel_recog

./: .gitignore  .gitmodules  README.md  autostart.toml  buf.gen.yaml  camera_parameter_setting.py  damage_panel_recog_and_tracking.py  librealsense2_source_build.md  mise.toml  panel_recog_camera.py  panel_recog_normal_camera.py  panel_recog_static.py  pyproject.toml  realsense_bag_player.py  record.py  requirements.txt  webcam.py
calib/: extrinsics_panel_recog_camera_to_main_camera.yaml  intrinsics_main_camera.yaml  intrinsics_panel_recog_camera.yaml
calibration/: README.md  calibrate_extrinsics.py  calibrate_intrinsics.py  capture_calib_images.py
calibration/checkerboard/: README.md
config/: default.yaml
damage_panel_tracking/: cli.py  config.py  defaults.py  pipeline.py  runtime.py
damage_panel_tracking/camera/: capture.py  v4l2ctl.py
damage_panel_tracking/detection/: hsv.py  pairing.py  types.py
damage_panel_tracking/domain/: message.py
damage_panel_tracking/publish/: zenoh_pub.py
damage_panel_tracking/tracking/: base.py  distance_tracker.py  motpy_tracker.py  noop_tracker.py
damage_panel_tracking/transform/: __init__.py  projection.py  session.py
damage_panel_tracking/ui/: draw.py  gui.py  qt_compat.py
damage_panel_tracking/utils/: __init__.py  motion_logger.py
domain/: config.py  message.py
msg/: pyproject.toml
msg/src/msg/: __init__.py
